API: Update swagger annotations #2132
